@@ -1,6 +1,9 @@
 1.0 "Asieoniezi"
  362436 Retrieving group list runs forever (Guilhèm Bonnefille, Søren Boll Overgaard)
  367578 Crash when subscribing to an allready subscribed group. (Axion)
+ 360375 non-ascii subject is mangled (F. Crozat)
+ 365990 Pan doesn't encode sender when sending (Christophe)
+ 366542 crash with "ignore thread" when no thread selected
 
 0.117 "We'll fly and we'll fall and we'll burn"
  361941 Slow download / Download corrupted in 0.116, fix included (Stéphane BERTHELOT)
